# olist

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
EDA/: EDA.ipynb
eCommerce/: data.py
