[tool.poetry]
name = "eCommerce"
version = "0.1.2"
description = "Custom-built package for statistical analysis and predictive modeling on Olist's Kaggle Data"
authors = ["Ian Yu <ian.yu@arc.com.co>"]
packages = [
    { include = "eCommerce" },
    { include = "eCommerce/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
pystan = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"